--- a/animated-header-5.html
+++ b/animated-header-5.html
@@ -15,7 +15,7 @@
 
 <style type="text/css">
 *{ margin:0px; padding:0; }
-header{ width:100%; float:left; z-index:1; transition: -webkit-transform .3s ease; transition: transform .3s ease; padding-top:120px; }
+header{ width:100%; float:left; z-index:1; /*transition: -webkit-transform .3s ease; transition: transform .3s ease; padding-top:120px;*/ }
 .hdrBtm{ width:100%; padding:30px 0px; float:left; position: relative; background:rgba(0, 255, 255, 0.7); }
 .StickyElementAfterScroll{ transition: -webkit-transform .3s ease; transition: transform .3s ease; transition: transform .3s ease,-webkit-transform .3s ease; }
 .Sticky .StickyElementAfterScroll{ /*-webkit-transform: translateY(-60px); transform: translateY(-60px); */	position: fixed; top:0; left:0; width:100%; }
@@ -28,15 +28,15 @@ header{ width:100%; float:left; z-index:1; transition: -webkit-transform .3s eas
 <img src="https://preview.oklerthemes.com/porto/7.2.0/img/slides/slide-corporate-3-1.jpg" alt="" style="width:100%;">
 </div>
 <!-- <button onclick="window.location.href='https://www.google.com/'">Click me</button> -->
-
+	<header class="header">
+		<div class="StickyElementAfterScroll" style="background:yellow">2<br>2<br>2<br>2<br>2<br>2</div>
+	</header>
 
 	<div style="width:100%; float:left; margin-top:0px;">
 		<img src="https://preview.oklerthemes.com/porto/7.2.0/img/slides/slide-corporate-3-1.jpg" alt="" style="width:100%;">
 	</div>
 
-	<header class="header">
-			<div class="StickyElementAfterScroll" style="background:yellow">2<br>2<br>2<br>2<br>2<br>2</div>
-		</header>
+
 <div style="width:100%; height:2200px; clear:both;">
 </div>
 
@@ -63,19 +63,14 @@ header{ width:100%; float:left; z-index:1; transition: -webkit-transform .3s eas
 			var scrollTop = $(window).scrollTop();
 			console.log("scroll to top:"+scrollTop);
 
-			/*var StikyElementOffset = $(StikyElement).offset();
-			var StikyElementTopOffset = StikyElementOffset.top;
-			console.log("sticky top offset:"+StikyElementTopOffset);*/
 			console.log("sticky top offset:"+StikyElementTopOffset);
 			
 			if(scrollTop >= StikyElementTopOffset ){
-				//$(StikyElement).addClass(StikyClass);
-				$("html").addClass(StikyClass);
-				$("body").css("padding-top", FullHeaderElementHeight);
+				$("body").addClass(StikyClass).css("padding-top", FullHeaderElementHeight);
+				//$("body");
 			}else{
-				//$(StikyElement).removeClass(StikyClass);
-				$("html").removeClass(StikyClass);
-				$("body").css("padding-top", "");
+				$("body").removeClass(StikyClass).css("padding-top", "");
+				//$("body");
 			}
 		}
 
