--- a/html-v1/index.html
+++ b/html-v1/index.html
@@ -59,8 +59,22 @@
                         <a class="float-right menuToggleSwitch"><span></span><span></span><span></span></a>
                     <nav class="primary-menu float-right">
                         <ul>
-                            <li><a href="#">THE CENTER</a></li>
-                            <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
+                            <li><a href="#">THE CENTER</a>
+                                <ul>
+                                    <li><a href="#">THE CENTER</a></li>
+                                    <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
+                                    <li><a href="#">KNOW YOUR BREAST</a></li>
+                                    <li><a href="#">COSMETIC SURGERY</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">LEARN ABOUT BREAST CANCER</a>
+                                <ul>
+                                    <li><a href="#">THE CENTER</a></li>
+                                    <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
+                                    <li><a href="#">KNOW YOUR BREAST</a></li>
+                                    <li><a href="#">COSMETIC SURGERY</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#">KNOW YOUR BREAST</a></li>
                             <li><a href="#">COSMETIC SURGERY</a></li>
                         </ul>                       
@@ -203,8 +217,8 @@
             </div>
             <div class="row text-center">
                 <div class="col col-xl-12">
-                    <a href="#" class="btn btn-round btn-line btn-green wow fadeIn">LEARN ABOUT THE APPROACH<i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                    <a href="#" class="btn btn-round btn-solid wow fadeIn">LEARN ABOUT THE APPROACH<i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                    <a href="#" class="btn btn-round btn-line btn-green wow fadeIn">LEARN MORE ABOUT PREVENTION<i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                    <a href="#" class="btn btn-round btn-solid wow fadeIn">SCHEDULE YOUR APPOINTMENT TODAY<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -251,28 +265,28 @@
             <div class="row wow fadeInUp" data-wow-delay="1.4s">
                 <div class="owl-carousel homeTeamMultiSlider">
                     <div class="team-box">
-                        <div class="team-image"><img src="assets/images/Imad+Hajj.jpg" alt=""></div>
+                        <div class="team-image"><img src="assets/images/Imad+Hajj.jpg" alt=""><span class="team-image-overlay"></span></div>
                         <div class="team-cont">
                             <h3 class="heading-md color-blue">Dr. Imad el Hajj<br>MD, FRCS </h3>
                             <p class="color-blue">Consultant Surgeon</p>
                         </div>
                     </div>
                     <div class="team-box">
-                        <div class="team-image"><img src="assets/images/charles.jpg" alt=""></div>
+                        <div class="team-image"><img src="assets/images/charles.jpg" alt=""><span class="team-image-overlay"></span></div>
                         <div class="team-cont">
                             <h3 class="heading-md color-blue">Dr. Charles Maalouf</h3>
                             <p class="color-blue">Reconstructive & Plastic  Surgeon</p>
                         </div>
                     </div>
                     <div class="team-box">
-                        <div class="team-image"><img src="assets/images/nursing-1.jpg" alt=""></div>
+                        <div class="team-image"><img src="assets/images/nursing-1.jpg" alt=""><span class="team-image-overlay green-overlay"></span></div>
                         <div class="team-cont">
                             <h3 class="heading-md color-green">Jane Doe</h3>
                             <p class="color-green">Breast Nurse</p>
                         </div>
                     </div>
                     <div class="team-box">
-                        <div class="team-image"><img src="assets/images/nursing-2.jpg" alt=""></div>
+                        <div class="team-image"><img src="assets/images/nursing-2.jpg" alt=""><span class="team-image-overlay green-overlay"></span></div>
                         <div class="team-cont">
                             <h3 class="heading-md color-green">Jane Doe</h3>
                             <p class="color-green">Breast Nurse</p>
