--- a/HTML/switch-radio.html
+++ b/HTML/switch-radio.html
@@ -55,6 +55,9 @@
 	</label>
 
 
+	<input type="text" class="form-list-item-name" [size]="myInput.value.length" size="1" #myInput>
+
+
 
 	<script>
 	/* switch-btn-with-labels script start */
