--- a/HTML/html-v2/index.html
+++ b/HTML/html-v2/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- fonts -->
     <link href="assets/fonts/font-awesome/font-awesome.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
     <!-- base css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
@@ -87,13 +87,20 @@
                                 <ul class="mobilemenu_ul">
                                     <li><a href="#">THE CENTER</a>
                                         <ul>
-                                            <li><a href="#">THE CENTER</a>
+                                            <li class="current-menu-item"><a href="#">THE CENTER</a>
                                                 <ul>
-                                                        <li><a href="#">THE CENTER</a></li>
-                                                        <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
-                                                        <li><a href="#">KNOW YOUR BREAST</a></li>
-                                                        <li><a href="#">COSMETIC SURGERY</a></li>
-                                                    </ul>
+                                                    <li><a href="#">THE CENTER</a></li>
+                                                    <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
+                                                    <li><a href="#">KNOW YOUR BREAST</a></li>
+                                                    <li><a href="#">COSMETIC SURGERY</a>
+                                                        <ul>
+                                                            <li><a href="#">THE CENTER</a></li>
+                                                            <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
+                                                            <li><a href="#">KNOW YOUR BREAST</a></li>
+                                                            <li><a href="#">COSMETIC SURGERY</a></li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
                                             </li>
                                             <li><a href="#">LEARN ABOUT BREAST CANCER</a></li>
                                             <li><a href="#">KNOW YOUR BREAST</a></li>
@@ -121,7 +128,7 @@
     <!-- header closed -->
 
 
-    <!-- home banner css start -->
+    <!-- home banner start -->
     <div class="home-banner-area wow fadeIn">
         <div class="owl-carousel singleAnimatedBanner">
             <!-- slide 1 open -->
@@ -172,7 +179,20 @@
 
         </div>
     </div>
-    <!-- home banner css ended -->
+    <!-- home banner ended -->
+
+
+    <!-- home search area open -->
+    <div class="home-search-area">
+        <div class="container">
+            <div class="search-form-wrap">
+                <div class="colum"><input type="text"></div>
+                <div class="colum"><input type="text"></div>
+                <div class="colum"><input type="submit" value="Search"></div>
+            </div>
+        </div>
+    </div>
+    <!-- home search area closed -->
 
 
     <!-- START JAVASCRIPT -->
