--- a/HTML/scrollbar-visible-in-mobile.html
+++ b/HTML/scrollbar-visible-in-mobile.html
@@ -29,7 +29,7 @@
     		box-shadow: 0 0 1px rgba(255,255,255,.5);
         }*/
         
-
+/*
         ::-webkit-scrollbar {
         -webkit-appearance: none;
         width: 7px;
@@ -39,7 +39,20 @@
         border-radius: 4px;
         background-color: rgba(0,0,0,.5);
         box-shadow: 0 0 1px rgba(255,255,255,.5);
-        }
+		}*/
+		
+		::-moz-scrollbar {
+width: 12px;
+}
+::-moz-scrollbar-track {
+-moz-box-shadow: inset 0 0 6px #fff);
+background:#000;
+}
+::-moz-scrollbar-thumb {
+border-radius: 10px;
+-moz-box-shadow: inset 0 0 6px #fff;
+background:#7A252B;
+}*
 	</style>
 	
 
