--- a/HTML/slick-slider-with-animation.html
+++ b/HTML/slick-slider-with-animation.html
@@ -8,45 +8,139 @@
 
   <script src="assets/js/jquery-2.2.4.min.js"></script>
   
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway:400,700,900|Roboto+Slab&display=swap" rel="stylesheet">
 
   <link href="assets/css/slick.css" rel="stylesheet" media="all and (orientation:landscape)">
   <!-- <link href="assets/css/slick-theme.css" rel="stylesheet" media="all and (orientation:landscape)"> -->
-  <!-- <link href="assets/css/animate.min.css" rel="stylesheet" media="all and (orientation:landscape)"> -->
+  <link href="assets/css/animate.min.css" rel="stylesheet" media="all and (orientation:landscape)">
   <link href="assets/css/slick-custom.css" rel="stylesheet" media="all and (orientation:landscape)">
 
 </head>
 <body>
 
 	<!-- single slide open -->
-	<div class="slider slick-animated-slider">
+	<div class="slider slick-animated-slider slick-animated-normal-slider">
 		<div>
-			<div class="slick-content-area fadeInLeft"><div class="">fdfdfdf</div></div>
-			<img src="assets/images/travel-banner-1.jpg" class="animatedBgRevese">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-2.jpg" class="slider-banner-image animatedBg">
 		</div>
 		<div>
-			<div class="slick-content-area fadeInLeft"><div class="">fdfdfdf</div></div>
-			<img src="assets/images/travel-banner-2.jpg" class="animatedBgRevese">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-6.jpg" class="slider-banner-image animatedBg">
 		</div>
 		<div>
-			<div class="slick-content-area fadeInLeft"><div class="">fdfdfdf</div></div>
-			<img src="assets/images/banner-1.jpg" class="animatedBgRevese">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-1.jpg" class="slider-banner-image animatedBg">
 		</div>
 	</div>
 	<!-- single slider closed -->
+	
+	<div style="width:100%; height:30px;"></div>
+
+	<!-- single slide open -->
+	<div class="slider slick-animated-slider slick-animated-parallax-slider">
+		<div class="parallaxator">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-2.jpg" class="slider-banner-image parallax_child">
+		</div>
+		<div class="parallaxator">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-6.jpg" class="slider-banner-image parallax_child">
+		</div>
+		<div class="parallaxator">
+			<div class="slick-content-area">
+				<div class="container">
+					<div class="animated" data-animation-in="fadeInUp"><h3 class="subheading">18 Sep 2019</h3></div>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="0.4"><h3 class="heading">Amazing Tour</h3></div>
+					<p class="animated" data-animation-in="fadeInUp" data-delay-in="0.9">Aside from the visual aspect, Direngine also ensures responsiveness, compatibility with modern devices and browsers</p>
+					<div class="animated" data-animation-in="fadeInUp" data-delay-in="1.2"><a href="#" class="link">EXPLORE NOW</a></div>
+				</div>
+			</div>
+			<div class="slider-overlay"></div>
+			<img src="assets/images/travel-banner-1.jpg" class="slider-banner-image parallax_child">
+		</div>
+	</div>
+	<!-- single slider closed -->
+
+<div style="width:100%; height:1200px;"></div>
+
+
+
+
+
 <script src="assets/js/slick.min.js"></script>
+<script src="https://alexandrebuffet.fr/codepen/slider/slick-animation.min.js"></script>
+<script src="assets/js/parallaxator.js"></script>
+
 	<script type="text/javascript">
-	$('.slick-animated-slider').slick({
-		dots: false,
+	$('.slick-animated-normal-slider').slick({
+		dots: true,
 		infinite: true,
-		arrows:false,
-		speed: 300,
+		arrows:true,
 		autoplay: true,
-		autoplaySpeed: 5000,
+		speed: 800,
+		lazyLoad: 'progressive',
 		fade: true,
 		cssEase: 'linear',
 		slidesToShow: 1,
 		slidesToScroll: 1
-	});
+	}).slickAnimation();
+	</script>
+
+
+<script type="text/javascript">
+	$('.slick-animated-parallax-slider').slick({
+		dots: true,
+		infinite: true,
+		arrows:true,
+		autoplay: true,
+		speed: 800,
+		lazyLoad: 'progressive',
+		fade: true,
+		cssEase: 'linear',
+		slidesToShow: 1,
+		slidesToScroll: 1
+	}).slickAnimation();
 	</script>
 
 </body>
