--- a/HTML/slick-slider-with-animation.html
+++ b/HTML/slick-slider-with-animation.html
@@ -134,8 +134,8 @@
 		infinite: true,
 		arrows:true,
 		autoplay: true,
-		speed: 800,
-		lazyLoad: 'progressive',
+		autoplaySpeed: 5000,
+		speed: 2000,
 		fade: true,
 		cssEase: 'linear',
 		slidesToShow: 1,
