--- a/HTML/html-v5/index.html
+++ b/HTML/html-v5/index.html
@@ -124,7 +124,7 @@
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
-                        <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                        <ul class="nav navbar-nav _navbar-right pull-right" data-in="fadeInDown" data-out="fadeOutUp">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="#">About Us</a></li>
                             <li class="dropdown megamenu-fw">
@@ -294,8 +294,25 @@
     </div>
     <!-- single slider closed -->
 
+    <div class="clearfix"></div>
 
-    <!-- <div class="clearfix"></div>       -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-4">
+                    <div class="thumbnail-info-box">
+                        <div class="image-frame">
+                            <img src="assets/images/travel-banner-1.jpg" alt="">
+                            <a href="javascript:void(0);" class="image-link-icon"></a>
+                            <div class="image-overlay"></div>
+                        </div>
+                        <div class="content-box">fsdfsdf</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
     <div class="clearfix"></div>
