--- a/HTML/html-v5/index.html
+++ b/HTML/html-v5/index.html
@@ -306,7 +306,10 @@
                             <a href="javascript:void(0);" class="image-link-icon"></a>
                             <div class="image-overlay"></div>
                         </div>
-                        <div class="content-box">fsdfsdf</div>
+                        <div class="content-box">
+                            <h3><a href="#">The Complete JavaScript Course for Beginner</a></h3>
+                            <p>Lorem ipsum dolor sit amet, vix diam nusquam at. Ex usu labitur nostrud invenire</p>
+                        </div>
                     </div>
                 </div>
 
