--- a/HTML/html-v5/index.html
+++ b/HTML/html-v5/index.html
@@ -320,6 +320,39 @@
 
     <div class="clearfix"></div>
 
+    <div class="container">
+    <div class="slider multiple-items">
+            <div>
+                <h3>1</h3>
+            </div>
+            <div>
+                <h3>2</h3>
+            </div>
+            <div>
+                <h3>3</h3>
+            </div>
+            <div>
+                <h3>4</h3>
+            </div>
+            <div>
+                <h3>5</h3>
+            </div>
+            <div>
+                <h3>6</h3>
+            </div>
+            <div>
+                <h3>7</h3>
+            </div>
+            <div>
+                <h3>8</h3>
+            </div>
+            <div>
+                <h3>9</h3>
+            </div>
+        </div>
+    </div>
+        <div class="clearfix"></div>
+
     <!-- Start Home -->
     <div class="pageheader">
         <div class="container">
